force-app/main/default/objects/BGBK__GlobalSettings__c/BGBK__GlobalSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>BGBK Global Settings</label>
</CustomObject>