force-app/main/default/objects/BGBK__GlobalSettings__c/fields/BGBK__Enable_DRE_Logs__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Enable_DRE_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rules Engine Logs Active</label>
    <type>Checkbox</type>
</CustomField>