force-app/main/default/objects/BGBK__GlobalSettings__c/fields/BGBK__Enable_DRE_Preview_Mode__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Enable_DRE_Preview_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this setting to run Rules Engine without saving any changes. The system runs in batch mode and produces a set of Event Logs with Type = PREVIEW. Make sure Rules Engine Logs are active. This feature can be useful for debugging CPU Timeout errors</description>
    <inlineHelpText>Use to debug CPU Timeout errors</inlineHelpText>
    <label>Rules Engine Preview Mode</label>
    <type>Checkbox</type>
</CustomField>