force-app/main/default/objects/BGBK__GlobalSettings__c/fields/BGBK__Exclude_Children__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Exclude_Children__c</fullName>
    <description>Comma-delimited list of child relationship names to be excluded from DRE DataContext. For example, MUSW__Fees__r,CustomObjects__r (notice, use '__r')</description>
    <inlineHelpText>Comma-delimited list of child relationship names to be excluded from DRE DataContext. For example, MUSW__Fees__r,CustomObjects__r (notice, use '__r')</inlineHelpText>
    <label>Exclude Children</label>
    <length>255</length>
    <type>Text</type>
</CustomField>