force-app/main/default/objects/BGBK__GlobalSettings__c/fields/BGBK__Parents__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Parents__c</fullName>
    <description>List of comma-delimited custom objects that you can relate children records to</description>
    <label>Additional Parents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>