force-app/main/default/objects/BGBK__GlobalSettings__c/fields/BGBK__rulesEngineActive__c.field-meta.xml
<CustomField>
    <fullName>BGBK__rulesEngineActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rules Engine Active</label>
    <type>Checkbox</type>
</CustomField>